Fixed margin of collapsed section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,9 +55,12 @@ $shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
 .x2b-expnd.collapsed {
   visibility: visible;
+  margin-bottom: (1.5 * $spacer-y);
 }
 .x2b-expnd {
+  display: block;
   visibility: hidden;
+  margin-bottom: (-1 * $spacer-y);
 }
 
 
@@ -69,7 +72,7 @@ $shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
     content: " ";
     display: block;
     height: (4.375 * $spacer-y);
-    margin-top: (0 - 4.375 * $spacer-y);
+    margin-top: (-4.375 * $spacer-y);
     visibility: hidden;
 }
 
